// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with a required attribute 1`] = `
<input
  autoComplete="false"
  className="apm-mi-form-control"
  onBlur={[Function]}
  onChange={[Function]}
  required={true}
  type="text"
  value=""
/>
`;

exports[`<TextInput /> with a string value 1`] = `
<input
  autoComplete="false"
  className="apm-mi-form-control"
  onBlur={[Function]}
  onChange={[Function]}
  type="text"
  value="Bill"
/>
`;

exports[`<TextInput /> with a stringified value 1`] = `
<input
  autoComplete="false"
  className="apm-mi-form-control"
  onBlur={[Function]}
  onChange={[Function]}
  type="text"
  value="4593.3"
/>
`;

exports[`<TextInput /> with autocomplete enabled 1`] = `
<input
  autoComplete="true"
  className="apm-mi-form-control"
  onBlur={[Function]}
  onChange={[Function]}
  type="text"
  value=""
/>
`;

exports[`<TextInput /> with no props 1`] = `
<input
  autoComplete="false"
  className="apm-mi-form-control"
  onBlur={[Function]}
  onChange={[Function]}
  type="text"
  value=""
/>
`;

exports[`<TextInput /> with value of null 1`] = `
<input
  autoComplete="false"
  className="apm-mi-form-control"
  onBlur={[Function]}
  onChange={[Function]}
  type="text"
  value=""
/>
`;
